# Proto-jogo

./: CMakeLists.txt  README.md  icon.svg.import  project.godot
scenes/: Main.tscn
src/: CMakeLists.txt  main.cpp
